创建module聚合子模块

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
     <packaging>pom</packaging>
     <modules>
         <module>taotao-manage-pojo</module>
+        <module>taotao-manage-mapper</module>
+        <module>taotao-manage-service</module>
+        <module>taotao-manage-web</module>
     </modules>
 
     <parent>
