--- a/taotao-manage-service/pom.xml
+++ b/taotao-manage-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>taotao-manage-pojo</artifactId>
+    <artifactId>taotao-manage-service</artifactId>
     <packaging>jar</packaging>
 
 </project>
