--- a/taotao-manage-web/pom.xml
+++ b/taotao-manage-web/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>taotao-manage-pojo</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>taotao-manage-web</artifactId>
+    <packaging>war</packaging>
 
 </project>
