--- a/taotao-manage-pojo/pom.xml
+++ b/taotao-manage-pojo/pom.xml
@@ -12,4 +12,12 @@
     <artifactId>taotao-manage-pojo</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <!-- JPA注解依赖 -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
