--- a/taotao-manage-web/pom.xml
+++ b/taotao-manage-web/pom.xml
@@ -56,4 +56,18 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <!--配置Tomcat插件-->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <configuration>
+                    <port>9082</port>
+                    <path>/</path>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
