--- a/taotao-test/pom.xml
+++ b/taotao-test/pom.xml
@@ -15,6 +15,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.taotao.manage</groupId>
+            <artifactId>taotao-manage-web</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 <!--        <dependency>
             <groupId>com.oneplus.inventory</groupId>
             <artifactId>inventory-web</artifactId>
