通过test工程main方法启动tomcat

--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,8 @@
         </dependency>
     </dependencies>
 
-    <build>
+<!--    <build>
         <plugins>
-            <!--配置Tomcat插件-->
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
@@ -61,5 +60,5 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 </project>
