--- a/taotao-manage-service/pom.xml
+++ b/taotao-manage-service/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>spring-rabbit</artifactId>
             <version>1.4.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
         <!-- 	    <dependency>
                     <groupId>com.rabbitmq</groupId>
                     <artifactId>amqp-client</artifactId>
