--- a/taotao-manage-web/src/main/webapp/WEB-INF/web.xml
+++ b/taotao-manage-web/src/main/webapp/WEB-INF/web.xml
@@ -5,11 +5,22 @@
 	id="WebApp_ID" version="2.5">
 	<display-name>taotao-manage</display-name>
 
+	<!--ContextLoaderListener监听器是装载spring框架本身的bean上下文（如Service和DAO层等），
+		DispatcherServlet是装载SpringMVC的上下文。
+	-->
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring/applicationContext*.xml</param-value>
 	</context-param>
 
+	<!--
+		如filter 需要用到 bean ，但是加载顺序是 先加载filter 后加载spring，则filter中初始化操作中的bean为null；
+	首先可以肯定 加载顺序与他们在web.xml 文件中的先后顺序无关。
+	web.xml 中 listener 和 serverlet 的加载顺序为 先 listener 后serverlet
+	最终得出结果：先 listener >> filter >> servlet >>  spring
+	 所以，如果过滤器中要使用到 bean，可以将spring 的加载 改成 Listener的方式
+	 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -54,14 +65,18 @@
 		<servlet-name>taotao-manage</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
+			<description>配置spring mvc加载的配置文件（配置处理器映射器、适配器等等）</description>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:spring/taotao-manage-servlet.xml</param-value>
 		</init-param>
+		<!-- 1容器启动时初始化该servlete, 0第一次访问的时候初始化该servlet -->
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>taotao-manage</servlet-name>
+		<!-- 可行： /、*.xxx、/xxx/*
+		    不可行： /* (struct中可以这样配置，原因是struct和springmvc的入口不一样，struct入口是Filter,springmvc入口是servlet,在servlet中“/”就代表全部了) -->
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
 
