--- a/taotao-manage-mapper/pom.xml
+++ b/taotao-manage-mapper/pom.xml
@@ -38,5 +38,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
